Dev/src/FinancialForce Revenue Recognition Expansion for PSA/objects/pse__Timecard__c.object
<CustomObject>
    <fields>
        <fullName>BillRate__c</fullName>
        <formula>pse__Timecard_Header__r.pse__Bill_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ResourceName__c</fullName>
        <formula>pse__Resource__r.FirstName &amp; &quot; &quot; &amp;  pse__Resource__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevenueRecognitionCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revenue Recognition Completed</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>